# intecomm-edc

./: .codeclimate.yml  .coveragerc  .env-site  .env-tests  .env.uat  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGES  MANIFEST.in  README.md  README.rst  Untitled.ipynb  env.sample  intecomm_cleaning.ipynb  manage.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
docs/: .~lock.forms_reference.md#  forms_reference.md
intecomm_ae/: action_items.py  admin_site.py  apps.py  baker_recipes.py  list_data.py  urls.py
intecomm_ae/admin/: __init__.py  ae_followup_admin.py  ae_initial_admin.py  ae_susar_admin.py  ae_tmg_admin.py  death_report_admin.py  death_report_tmg_admin.py  death_report_tmg_second_admin.py  hospitalization_admin.py  modeladmin_mixins.py
intecomm_ae/forms/: __init__.py  ae_initial_form.py  death_report_form.py  modelform_mixins.py
intecomm_ae/migrations/: 0001_initial.py  0002_rename_narrative_aetmg_investigator_narrative_and_more.py  0003_alter_deathreporttmg_cause_of_death_agreed_and_more.py  0004_alter_aefollowup_options_alter_aeinitial_options_and_more.py  0005_alter_aefollowup_managers_alter_aeinitial_managers_and_more.py  0006_hospitalization_historicalhospitalization.py  0007_aeinitial_ae_classification_as_text_and_more.py  0008_alter_deathreporttmgsecond_options_and_more.py  0009_alter_aefollowup_device_created_and_more.py  0010_alter_deathreport_death_date_and_more.py  0011_alter_aefollowup_options_alter_aeinitial_options_and_more.py  0012_aefollowup_intecomm_ae_subject_a0869e_idx_and_more.py  0013_aetmg_intecomm_ae_subject_a182a3_idx_and_more.py  0014_alter_aefollowup_site_alter_aeinitial_site_and_more.py
intecomm_ae/model_mixins/: __init__.py  ae_review_model_mixin.py
intecomm_ae/models/: __init__.py  ae_followup.py  ae_initial.py  ae_susar.py  ae_tmg.py  compatability.py  death_report.py  death_report_tmg.py  death_report_tmg_second.py  hospitalization.py
intecomm_ae/pdf_reports/: ae_pdf_report.py  ae_report.py  crf_report_mixin.py  death_pdf_report.py  death_report.py  pdf_report_mixin.py
intecomm_ae/tests/: urls.py
intecomm_analytics/: constants.py  get_tables.py
intecomm_analytics/dataframes/: __init__.py  get_appointment_df.py  get_baseline_df.py  get_baseline_diagnoses_df.py  get_conditions_by_gender.py  get_conditions_by_group.py  get_consent_df.py  get_df_main_1858.py  get_diagnoses_df.py  get_eof_df.py  get_eos_df.py  get_patientlog_df.py  (+4 more)
intecomm_auth/: apps.py  auth_objects.py  auths.py
intecomm_consent/: action_items.py  admin_site.py  apps.py  baker_recipes.py  consents.py  urls.py  utils.py
intecomm_dashboard/: apps.py  navbars.py  urls.py
intecomm_edc/: admin.py  apps.py  asgi.py  celery.py  navbars.py  urls.py  wsgi.py  wsgi_live.py  wsgi_uat.py
intecomm_export/: admin_site.py  apps.py  urls.py
intecomm_facility/: admin.py  admin_site.py  apps.py  forms.py  list_data.py  models.py  urls.py
intecomm_group/: action_item.py  admin_site.py  apps.py  baker_recipes.py  choices.py  constants.py  exceptions.py  patient_group_updater.py  randomize_group.py  urls.py  utils.py
intecomm_labs/: apps.py  lab_profiles.py  list_data.py  reportables.py
intecomm_lists/: admin.py  admin_site.py  apps.py  choices.py  constants.py  list_data.py  models.py  urls.py
intecomm_prn/: action_items.py  admin_site.py  apps.py  choices.py  constants.py  urls.py
intecomm_reports/: admin_site.py  apps.py  urls.py  vl_summary.py
intecomm_screening/: admin_site.py  apps.py  auth_objects.py  baker_recipes.py  choices.py  constants.py  eligibility.py  exceptions.py  group_identifier.py  identifiers.py  intecomm_admin_site_mixin.py  offline_models.py  randomize_group.py  urls.py  utils.py  views.py
intecomm_sites/: apps.py  intecomm_site.py  sites.py
intecomm_subject/: action_items.py  admin_site.py  apps.py  baker_recipes.py  choices.py  constants.py  form_runners.py  list_data.py  reference_model_configs.py  urls.py  utils.py
intecomm_visit_schedule/: apps.py  constants.py
tests/: test_settings.py
(+1096 files in other folders)
