[metadata]
name = intecomm-edc
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/intecomm-trial/intecomm-edc
license = GPL license, see LICENSE
description=INTECOMM Trial EDC (http://www.isrctn.com/ISRCTN76157257)
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc INTECOMM EDC, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    edc==0.4.50
    intecomm-form-validators
    beautifulsoup4
    canned-views

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    intecomm_edc.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
